added a CI workflow for github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,25 @@
 name: Continuous Integration #Nom du workflow
-on: #Condition d'execution
+on:
   workflow_dispatch:
-  push: #à chaque push
+  push:
     branches:
-      - '**' #sur l'ensemble des branches
+      - '**'
 
 jobs:
-  build: #job de build
-    runs-on: ubuntu-latest #L'agent utilisé est un Ubuntu
+  build:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-      uses: actions/checkout@v4 #Checkout pour récupérer le code
+        uses: actions/checkout@v4
+
       - name: ⚙️ Setup .NET 9 SDK
-      uses: actions/setup-dotnet@v4 #Réaliser le setup de dotnet sur l'agent
-      with:
-        dotnet-version: 9.0.101
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.101
+
       - name: Restore Dependencies
-      run: dotnet restore ./my-first-app.csproj #Réaliser une
-restauration de dépendance
+        run: dotnet restore ./my-first-app.csproj
+
       - name: Build Project
-      id: build #Define unique ID
-      run: dotnet build ./my-first-app.csproj --no-restore
+        id: build
+        run: dotnet build ./my-first-app.csproj --no-restore
