--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,4 @@ jobs:
           context: .
           file: ./my-first-app/dockerfile
           push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-first-app:latest
