--- a/.github/workflows/PR-feature-to-dev.yml
+++ b/.github/workflows/PR-feature-to-dev.yml
@@ -1,4 +1,4 @@
-name: CI - Feature to Dev
+name: CI - PR feature to dev
 
 # Déclenchement UNIQUEMENT sur Pull Request vers dev
 on:
@@ -53,7 +53,7 @@ jobs:
         run: npm test
 
   snyk-sca-critical:
-    name: SCA - Dependencies (CRITICAL)
+    name: SCA (CRITICAL) via SNYK
     runs-on: ubuntu-latest
     
     steps:
@@ -77,7 +77,7 @@ jobs:
           args: --severity-threshold=critical
 
   code-format:
-    name: Code Format Check
+    name: Code Formatting (linting)
     runs-on: ubuntu-latest
     continue-on-error: true
     
@@ -101,7 +101,7 @@ jobs:
         run: npm run lint
 
   snyk-sast:
-    name: SAST - Code Analysis (HIGH/CRITICAL)
+    name: SAST (HIGH/CRITICAL) via SNYK
     runs-on: ubuntu-latest
     continue-on-error: true
     
