--- a/.github/workflows/PR-feature-to-dev.yml
+++ b/.github/workflows/PR-feature-to-dev.yml
@@ -7,9 +7,6 @@ on:
       - dev
     types: [opened, synchronize, reopened]
 
-# Variables d'environnement
-env:
-  NODE_VERSION: '18'
 
 jobs:
   build:
@@ -30,23 +27,25 @@ jobs:
         id: build
         run: dotnet build ./my-first-app.csproj --no-restore
 
+jobs:
   unit-tests:
-    name: Unit Tests
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18'   # ou la version que tu utilises
           cache: 'npm'
-      
+          cache-dependency-path: './package-lock.json'  # Si ton package-lock.json est à la racine
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Run unit tests
         run: npm test
 
@@ -61,7 +60,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18'
       
       - name: Install dependencies
         run: npm ci
@@ -86,7 +85,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18'
           cache: 'npm'
       
       - name: Install dependencies
