--- a/.github/workflows/PR-feature-to-dev.yml
+++ b/.github/workflows/PR-feature-to-dev.yml
@@ -47,7 +47,7 @@ jobs:
         run: npm ci
 
       - name: Run unit tests
-        run: npm test
+        run: npm test --passWithNoTests
 
   snyk-sca-critical:
     name: SCA (CRITICAL) via SNYK
